# Python_Testing

./: .coverage  .gitignore  Pipfile  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg
docs/: repo.txt
docs/reports/pytest_html/: pytest_report_1.html  pytest_report_2.html  pytest_report_3.html  pytest_report_4.html
gudlift_reservation/: .coverage  config.py  json_handler.py  server.py  utils.py
gudlift_reservation/data/: clubs.json  competitions.json
gudlift_reservation/static/css/: style.css
gudlift_reservation/templates/: booking.html  index.html  login.html  welcome.html
gudlift_reservation/tests/: __init__.py  test_calculation.py  test_server.py  test_server_routes.py
gudlift_reservation/tests/integration_tests/: test_integration_app.py
gudlift_reservation/tests/performance_tests/: locustfile.py
gudlift_reservation/tests/unit_tests/: test_calculation.py  test_server_routes.py
