[tool.poetry]
name = "gudlift-reservation"
version = "0.1.0"
description = ""
authors = ["geo1310 <gbriche59@yahoo.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
pytest = "^8.1.1"
pytest-html = "^4.1.1"
coverage = "^7.4.4"
pytest-cov = "^5.0.0"
locust = "^2.26.0"
black = "^24.4.0"
isort = "^5.13.2"
pycln = "^2.4.0"
djhtml = "^3.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.locust]
locustfile = "gudlift_reservation/tests/performance_tests/locustfile.py"
host = "http://localhost:5000"
users = 1
spawn-rate = 1

[tool.pytest]
testpaths = "gudlift_reservation/tests"

[tool.coverage.run]
branch = true
omit = ["gudlift_reservation/tests/*", "__*", "config.py"]

[tool.flake8]
max-line-length = 119
exclude = "env/, docs/, .*/, __*"

[tool.black]
line-length = 119
exclude = 'env/, docs/, .*/, __*/'

[tool.format]
json = true
indent = 4
line_length = 119

