[metadata]
name = gudlift_reservation
version = 0.1.0

[options]
packages = find:
include_package_data = true
install_requires = Flask

[options.extras_require]
test = pytest

[tool:pytest]
testpaths = gudlift_reservation/tests

[coverage:run]
branch = True
source = app
omit = gudlift_reservation/tests/*, app.py, setup.py, config.py, __* 

[flake8]
max-line-length = 119
exclude = env/